<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ecommerce App</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="rating">Rating:</string>
    <string name="_5_0">5.0</string>
    <string name="comment">Comment:</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="color">Color:</string>
    <string name="size">Size:</string>
    <string name="submit_review">Submit Review</string>
    <string name="add_your_comment">Add your comment</string>
    <string name="order_date">Order Date:</string>
    <string name="total">Total:</string>
    <string name="category">Category</string>
    <string name="see_product">See Product</string>
    <string name="language">Language: English</string>
    <string name="change_language">Change Language</string>
    <string name="orders">Orders</string>
    <string name="no_orders_found">No orders found!</string>
    <string name="rating_2">4.4</string>
    <string name="old_price">$1600</string>
    <string name="new_price">$1600</string>
    <string name="product_description">Product Description</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="reviews">Reviews:</string>
    <string name="overall_rating">Overall Rating:</string>
    <string name="best_products">Best Products</string>
    <string name="best_deals">Best Deals</string>
    <string name="search_products">Search Products</string>
    <string name="no_favorite_items">No favorite items found. Add some products!</string>
    <string name="total_price">Total:</string>
    <string name="no_items_found">No items found in cart. Add some products!</string>
    <string name="place_order">Place Order</string>
    <string name="tab_home">Home</string>
    <string name="tab_sofas">Sofas</string>
    <string name="tab_tables">Tables</string>
    <string name="tab_chairs">Chairs</string>
    <string name="tab_beds">Beds</string>
    <string name="tab_decor">Decor</string>
    <string name="select_category">Select Category</string>
    <string name="select_min_rating">Select Min Rating</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="max_price">Max Price</string>
    <string name="min_rating">Min Rating</string>
    <string name="no_products_found">No products found!</string>
    <string name="size_text">Size: %1$s</string>
    <string name="total_text">Total: %1$s $</string>
    <string name="quantity_text">Quantity: %1$d</string>
    <string name="price_text">Price: $%1$s</string>
    <string name="order_date_text">Order Date: %1$s</string>
    <string name="total_price_text">Total: $%1$s</string>
</resources>