<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewCartTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cart"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:overScrollMode="never"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/textViewTotalPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_price"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewEmptyCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_items_found"
        android:textSize="18sp"
        android:textStyle="italic"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_order"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

</LinearLayout>
