<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ImageView
        android:id="@+id/imageViewProduct"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/textViewProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="@id/imageViewProduct"
        app:layout_constraintStart_toEndOf="@id/imageViewProduct"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:text="@string/product_name"/>

    <ImageView
        android:id="@+id/imgFavorite"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/home_favorites_filled"
        app:layout_constraintTop_toTopOf="@id/textViewProductName"
        app:layout_constraintEnd_toEndOf="@id/textViewProductName"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#666666"
        app:layout_constraintTop_toBottomOf="@id/textViewProductName"
        app:layout_constraintStart_toEndOf="@id/imageViewProduct"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:text="@string/category" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#333333"
        app:layout_constraintTop_toBottomOf="@id/textViewCategory"
        app:layout_constraintStart_toEndOf="@id/imageViewProduct"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:text="@string/price" />

    <Button
        android:id="@+id/btnSeeProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_product"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/textViewPrice"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
