<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_product_images"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardElevation="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager_product_images"
                android:layout_width="match_parent"
                android:layout_height="355dp" />

            <ImageView
                android:id="@+id/img_close"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/home_close"
                android:padding="5dp"
                android:layout_margin="10dp"
                android:layout_gravity="start|top"
                app:tint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_favorite"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/home_favorites"
                android:padding="5dp"
                android:layout_margin="10dp"
                android:contentDescription="Favorite"
                android:layout_gravity="end|top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="#000000" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linear_title_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@id/card_product_images"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="260dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/product_name"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_price" />

            <TextView
                android:id="@+id/tv_product_discounted_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/new_price"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_product_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/linear_title_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/product_description"/>

        <View
            android:id="@+id/view_top_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_product_description"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/linear_product_preferences"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/view_top_line"
            app:layout_constraintEnd_toEndOf="@id/view_top_line"
            app:layout_constraintTop_toBottomOf="@id/view_top_line"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_product_colors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/color" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_colors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_product_sizes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/size" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_sizes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_add_to_cart"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:text="@string/add_to_cart"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/linear_product_preferences"
            app:layout_constraintEnd_toEndOf="@id/linear_product_preferences"
            app:layout_constraintTop_toBottomOf="@+id/linear_product_preferences"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:id="@+id/linear_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/btn_add_to_cart"
            app:layout_constraintStart_toStartOf="@id/linear_product_preferences"
            app:layout_constraintEnd_toEndOf="@id/linear_product_preferences"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews"
                android:textSize="16sp"
                android:textStyle="bold"
                />


            <LinearLayout
                android:id="@+id/linear_overall_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/tv_overall_rating_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/overall_rating"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_overall_rating_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="4.4"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_user_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
